# sphobjinv

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTENT_LICENSE.txt  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  azure-coretest.yml  azure-pipelines.yml  azure-sdisttest.yml  black  black.bat  conftest.py  f8  f8.bat  linkcheck.py  pyproject.toml  pyproject_trial.toml  requirements-ci.in  requirements-ci.txt  requirements-dev.txt  requirements-flake8.txt  requirements-interrogate.txt  requirements-rtd.txt  requirements-travis.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/: FUNDING.yml  pr_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: all_core_tests.yml  ci_tests.yml  codeql.yml  constants.yml  default-branch-migration.yml  opened_pr_draft_notif.yml  opened_pr_to_draft.yml  ready_doctest.yml  ready_linting.yml  ready_test_matrix.yml  ready_test_nonloc.yml  release_check_sdist.yml  release_doc_warnings.yml  release_enusre_no_ver_markers.yml  release_flake8_noqa_nofail.yml  release_readme_doctest.yml  release_sdist_check.yml  release_test_file_coverage.yml
doc/: Makefile  make.bat
doc/source/: api.rst  api_listing.rst  api_usage.rst  cmdline.rst  cmdline_usage.rst  conf.py  customfile.rst  index.rst  levenshtein.rst  syntax.rst
doc/source/_static/: no-leven.csv  soi-logo_duo_border.xcf  suggest_timing.xlsx  suggest_timing_commands.txt  with-leven.csv
doc/source/_static/css/: custom.css
doc/source/_templates/: footer.html
doc/source/api/: enum.rst  exhaustive.rst  fileops.rst  formal.rst  index.rst  inventory.rst  zlib.rst
doc/source/api/modules/: inventory.rst
doc/source/cli/: convert.rst  git_diff.rst  index.rst  soi_root.rst  suggest.rst  textconv.rst
doc/source/cli/implementation/: convert.rst  core-textconv.rst  core.rst  index.rst  load.rst  parser.rst  paths.rst  suggest.rst  ui.rst  write.rst
doc/source/isphx/: objpull.py
doc/source/modules/: cmdline.rst  data.rst  error.rst  inventory.rst  re.rst  schema.rst
helpers/: update_readme.py
scripts/: pipc.bat  pipc.sh
sphobjinv/: __init__.py  cmdline.py  data.py  decode.py  encode.py  error.py  fileops.py  inventory.py  re.py  schema.py  sphobjinv.py  zlib.py
sphobjinv/test/: __init__.py  sphobjinv_api.py  sphobjinv_base.py  sphobjinv_cli.py  sphobjinv_readme.py
sphobjinv/test/resource/: objects_attrs.structjson  objects_beaker.inv  objects_bootstrap-datepicker.inv  objects_click.inv  objects_eyeD3.inv  objects_faker.inv  objects_jsonschema.inv  objects_matplotlib.inv  objects_mypy.inv  objects_nltk.inv  objects_noinfo.inv  objects_pdfminer.inv  objects_pelican.inv  objects_plone.inv  objects_pymongo.inv  objects_python.inv  objects_requests.inv  objects_scrapy.inv  objects_sympy.inv  objects_tinydb.inv  objects_tox.inv  objects_twython.inv  objects_yt.inv
src/sphobjinv/: __init__.py  __main__.py  _intersphinx.py  cmdline.py  data.py  enum.py  error.py  fileops.py  intersphinx.py  inventory.py  re.py  schema.py  version.py  zlib.py
src/sphobjinv/_vendored/: __init__.py
src/sphobjinv/_vendored/fuzzywuzzy/: __init__.py  benchmarks.py  fuzz.py  process.py  tests.py  utils.py
src/sphobjinv/cli/: __init__.py  convert.py  core.py  core_textconv.py  load.py  parser.py  paths.py  suggest.py  ui.py  write.py
src/sphobjinv/cmdline/: __init__.py  load.py  main.py  parser.py
tests/: __init__.py  conftest.py  enum.py  enums.py  fixtures_http.py  sphobjinv_api.py  sphobjinv_base.py  sphobjinv_cli.py  test_api_fail.py  test_api_good.py  test_api_good_nonlocal.py  test_cli.py  test_cli_nonlocal.py  test_cli_textconv.py  test_cli_textconv_nonlocal.py  test_cli_textconv_with_git.py  test_fixture.py  test_flake8_ext.py  test_hypothesis.py  test_intersphinx.py  test_readme.py  test_valid_objects.py  test_xfst.py  testall_inv_paths.py  unittest_tests.py  wd_wrapper.py
tests/resource/: objects_NAPALM.inv  objects_attrs.inv  objects_attrs.json  objects_attrs.txt  objects_attrs_20_3_0.inv  objects_attrs_plus_one_entry.inv  objects_attrs_plus_one_entry.txt  objects_bokeh.inv  objects_cclib.inv  objects_celery.inv  objects_cookiecutter.inv  objects_coverage.inv  objects_django.inv  objects_django_channels.inv  objects_flake8.inv  objects_flask.inv  objects_fonttools.inv  objects_gspread.inv  objects_h5py.inv  objects_hypothesis.inv  objects_jinja2.inv  objects_mdn.bad_inv  objects_mistune.inv  objects_mkdoc_zlib0.inv  objects_noproject.inv  objects_opencv.inv  objects_pandas.inv  objects_pingo.inv  objects_prio_test.bad_inv  objects_psutil.inv  objects_pyexcel.inv  objects_pygame.inv  objects_pyqt.inv  objects_pyserial.inv  objects_pytest.inv  objects_readthedocs_io.inv  objects_rocket.inv  objects_sarge.inv  objects_scapy.inv  objects_scipy.inv  (+7 more)
