[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
  "wheel",
]

[project]
name = "sphobjinv"
description = "Sphinx objects.inv Inspection/Manipulation Tool"
license = {text = "MIT License"}
authors = [{name = "Brian Skinn", email = "brian.skinn@gmail.com"}]
classifiers = [
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Environment :: Console",
    "Framework :: Sphinx",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
    "Development Status :: 5 - Production/Stable",
]
keywords = ["sphinx", "sphinx-doc", "inventory", "manager", "inspector"]
requires-python = ">=3.10"
dependencies = [
    "attrs>=19.2",
    "certifi",
    "jsonschema>=3.0",
]
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://github.com/bskinn/sphobjinv"
Changelog = "https://github.com/bskinn/sphobjinv/blob/main/CHANGELOG.md"
Docs = "https://sphobjinv.readthedocs.io/en/stable/"
Thank = "https://fosstodon.org/@btskinn"
Donate = "https://github.com/sponsors/bskinn"

[project.scripts]
sphobjinv = "sphobjinv.cli.core:main"

[tool.setuptools]
package-dir = {"" = "src"}
platforms = ["any"]
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "sphobjinv.version.__version__"}

[tool.black]
line-length = 88
include = '''
(
    ^/tests/.*[.]py$
  | ^/src/sphobjinv/.*[.]py$
  | ^/setup[.]py
  | ^/conftest[.]py
)
'''
exclude = '''
(
    __pycache__
  | ^/[.]
  | ^/doc
  | ^/env
  | ^/src/sphobjinv/_vendored
)
'''

[tool.interrogate]
exclude = ["src/sphobjinv/_vendored"]
fail-under = 100
verbose = 1

[tool.isort]
profile = "black"
known_first_party = ["sphobjinv", "tests"]
no_lines_before = ["LOCALFOLDER"]
extend_skip = ["src/sphobjinv/_vendored"]

[tool.mypy]
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
any_exprs_report = "mypy_any"
check_untyped_defs = true
disallow_incomplete_defs = true
linecount_report = "mypy_linecount"
no_implicit_optional = true
strict_bytes = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
exclude = '''(?x)(
    ^env/
  | /_vendored/
  )'''

[[tool.mypy.overrides]]
module = [
  "dictdiffer",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "sphobjinv._vendored.*",
]
ignore_errors = true
