[metadata]
name = sphobjinv
description = Sphinx objects.inv Inspection/Manipulation Tool
url = https://github.com/bskinn/sphobjinv
project_urls =
    Changelog=https://github.com/bskinn/sphobjinv/blob/main/CHANGELOG.md
    Docs=https://sphobjinv.readthedocs.io/en/stable/
    Thank=https://twitter.com/btskinn
    Donate=https://github.com/sponsors/bskinn
license = MIT License
license_file = LICENSE.txt
platforms = any
author = Brian Skinn
author_email = bskinn@alum.mit.edu
classifiers =
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Environment :: Console
    Framework :: Sphinx
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development
    Topic :: Software Development :: Documentation
    Topic :: Utilities
    Development Status :: 5 - Production/Stable
keywords = sphinx, sphinx-doc, inventory, manager, inspector

[options]
install_requires =
    attrs>=19.2
    certifi
    jsonschema>=3.0

python_requires = >=3.6
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sphobjinv=sphobjinv.cli.core:main
    